# kb-demo

./: README.md  main.py  pyproject.toml  requirements.txt
example/: first_layer.py  test.html  test.md
example/lib/: test.py
example/lib2/: test2.py
lib/: code_run_renderer.py  config.py  md_parser.py  utils.py
src/: code_run_renderer.py  main.py  md_parser.py  wrapper.py
static/: test.py
